[tool.poetry]
name = "project-youtube"
version = "0.1.0"
description = ""
authors = ["Muhammad_Hammad_Shah <Hammad4455shah5544@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.2"
pytest = "^8.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
